# orpy

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: python-test.yml
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  installation.rst
doc/source/releasenotes/: index.rst
doc/source/user/: shell.rst
orpy/: __init__.py  client.py  exceptions.py  oidc.py  shell.py  utils.py  version.py
orpy/_cmd/: config.py  deployments.py  info.py  resources.py
orpy/client/: __init__.py  base.py  client.py  config.py  deployments.py  info.py  resources.py
orpy/cmd/: config.py  deployments.py  info.py  resources.py  test.py
orpy/tests/: __init__.py  base.py  test_orpy.py
releasenotes/notes/: initial-version-with-full-functionality-c63da317250d228d.yaml  new-command-configuration-show-645affdd13bfd015.yaml  new-long-output-ddcb9d95d1431e47.yaml  use-objects-bf546c89548f424c.yaml  use-oidc-agent-bdfbb4d37788a455.yaml
