[metadata]
name = orpy
summary = Python library and CLI for the INDIGO PaaS Orchestrator.
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.com/indigo-dc/orpy
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    orpy

[entry_points]
console_scripts = 
    orpy = orpy.shell:main

orpy.cli= 
    test = orpy.cmd.test:TestOrchestratorEndpoint
    deployment_list = orpy.cmd.deployments:DeploymentList
    dep_list = orpy.cmd.deployments:DeploymentList
    deployment_show = orpy.cmd.deployments:DeploymentShow
    dep_show = orpy.cmd.deployments:DeploymentShow

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = orpy/locale
domain = orpy

[update_catalog]
domain = orpy
output_dir = orpy/locale
input_file = orpy/locale/orpy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = orpy/locale/orpy.pot
