[metadata]
name = orpy
summary = Python library and CLI for the INDIGO PaaS Orchestrator.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.com/indigo-dc/orpy
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    orpy

[entry_points]
console_scripts = 
    orpy = orpy.shell:main

orpy.cli= 
    test = orpy.cmd.test:TestOrchestratorEndpoint
    deployment_list = orpy.cmd.deployments:DeploymentList
    dep_list = orpy.cmd.deployments:DeploymentList
    deployment_show = orpy.cmd.deployments:DeploymentShow
    dep_show = orpy.cmd.deployments:DeploymentShow
    deployment_template = orpy.cmd.deployments:DeploymentGetTemplate
    dep_template = orpy.cmd.deployments:DeploymentGetTemplate
    deployment_create = orpy.cmd.deployments:DeploymentCreate
    dep_create = orpy.cmd.deployments:DeploymentCreate
    deployment_delete = orpy.cmd.deployments:DeploymentDelete
    dep_delete = orpy.cmd.deployments:DeploymentDelete
    deployment_update = orpy.cmd.deployments:DeploymentUpdate
    dep_update = orpy.cmd.deployments:DeploymentUpdate

    resource_list = orpy.cmd.resources:ResourcesList
    resource_show = orpy.cmd.resources:ResourcesShow

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
