[metadata]
name = orpy
summary = Python library and CLI for the INDIGO PaaS Orchestrator.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es

home-page = https://github.com/indigo-dc/orpy
project_urls =
    Bug Tracker = https://github.com/indigo-dc/orpy/issues
    Documentation = https://orpy.readthedocs.io/

python-requires = >=3.6           

license = Apache-2
license_file = LICENSE

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    orpy

[entry_points]
console_scripts = 
    orpy = orpy.shell:main

orpy.cli= 
    info                = orpy._cmd.info:OrchestratorEndpointInfo
    configuration_show  = orpy._cmd.config:OrchestratorConfigShow
    deployment_list     = orpy._cmd.deployments:DeploymentList
    dep_list            = orpy._cmd.deployments:DeploymentList
    deployment_show     = orpy._cmd.deployments:DeploymentShow
    dep_show            = orpy._cmd.deployments:DeploymentShow
    deployment_template = orpy._cmd.deployments:DeploymentGetTemplate
    dep_template        = orpy._cmd.deployments:DeploymentGetTemplate
    deployment_create   = orpy._cmd.deployments:DeploymentCreate
    dep_create          = orpy._cmd.deployments:DeploymentCreate
    deployment_delete   = orpy._cmd.deployments:DeploymentDelete
    dep_delete          = orpy._cmd.deployments:DeploymentDelete
    deployment_update   = orpy._cmd.deployments:DeploymentUpdate
    dep_update          = orpy._cmd.deployments:DeploymentUpdate

    resource_list       = orpy._cmd.resources:ResourcesList
    resource_show       = orpy._cmd.resources:ResourcesShow

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
